--- a/views/public/js.html
+++ b/views/public/js.html
@@ -1,5 +1,10 @@
-<script src="/views/assets/jquery/jquery.min.js"></script>
-<script src="/views/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="/views/assets/jquery-cookie/jquery.cookie.js"></script>
-<script src="/views/assets/artTemplate/template.js"></script>
-<script src="/views/assets/echarts/echarts.common.min.js"></script>
+<script src="/views/static/js/lib/require.js"></script>
+<script src="/views/static/js/lib/config.js"></script>
+
+<script>
+  require(["../static/js/common"])
+</script>
+
+
+<!--<script src="/views/assets/bootstrap/js/bootstrap.min.js"></script>-->
+<!--<script src="/views/assets/echarts/echarts.common.min.js"></script>-->
