--- a/views/public/aside.html
+++ b/views/public/aside.html
@@ -10,41 +10,44 @@
   <div class="navs">
     <ul class="list-unstyled">
       <li>
-        <a href="./index.html" class="active">
+        <a href="/" >
           <i class="fa fa-home"></i>
           仪表盘
         </a>
       </li>
+     
       <li>
-        <a href="./user_list.html">
-          <i class="fa fa-bell"></i>
-          用户管理
-        </a>
-      </li>
-      <li>
-        <a href="./teacher_list.html">
+        <a href="/teacher/list">
           <i class="fa fa-bell"></i>
           讲师管理
         </a>
       </li>
+
+       <li>
+        <a href="/category/list">
+          <i class="fa fa-indent"></i>
+          分类管理
+        </a>
+      </li>
+
       <li>
         <a href="javascript:;">
-          <i class="fa fa-cog"></i>
+          <i class="fa fa-th"></i>
           课程管理
           <i class="arrow fa fa-angle-right"></i>
         </a>
         <ul class="list-unstyled">
           <li>
-            <a href="./course_add.html">
+            <a href="/course/add">
               课程添加
             </a>
           </li>
           <li>
-            <a href="./course_list.html">
+            <a href="/course/list">
               课程列表
             </a>
           </li>
-          <li>
+         <!--  <li>
             <a href="./course_category.html">
               课程分类
             </a>
@@ -53,16 +56,11 @@
             <a href="./course_topic.html">
               课程专题
             </a>
-          </li>
+          </li> -->
         </ul>
       </li>
-      <li>
-        <a href="./advert_list.html">
-          <i class="fa fa-bell"></i>
-          广告管理
-        </a>
-      </li>
-      <li>
+     
+     <!--  <li>
         <a href="javascript:;">
           <i class="fa fa-cog"></i>
           系统设置
@@ -78,7 +76,7 @@
             <a href="javascript:;">
               权限管理
             </a>
-          </li>
+          </li> -->
         </ul>
       </li>
     </ul>
