--- a/views/teacher/add.html
+++ b/views/teacher/add.html
@@ -35,10 +35,10 @@
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">姓名</label>
                             <div class="col-xs-4">
-                                <input type="text" class="form-control input-sm" 
-                                name="tc_name"
-                                placeholder="讲师名称">
+                                <input type="text" class="form-control input-sm" value="{{tc_name}}" name="tc_name" placeholder="讲师名称"
+                                data-required data-trim data-description="name" data-describedby="msgforname">
                             </div>
+                            <span id="msgforname" class="col-xs-5 help-block"></span>
                         </div>
                         <!-- 只有添加操作，才需要密码框 -->
                 <!-- 所以我们可以通过判断传进模板中的额数是否有tc_id来区分是编辑还是添加 -->
@@ -47,8 +47,11 @@
                        <div class="form-group">
                             <label for="" class="col-xs-3 control-label">密码</label>
                             <div class="col-xs-4">
-                                <input type="password" class="form-control input-sm">
+                                <input type="password" class="form-control input-sm"
+                                 data-required data-pattern="^[a-zA-Z0-9]{6,15}$" data-description="password" 
+                                 data-describedby="msgforpass">
                             </div>
+                             <span id="msgforpass" class="col-xs-5 help-block"></span>
                         </div>
                    {{/if}}
                        
@@ -56,8 +59,9 @@
                             <label for="" class="col-xs-3 control-label">入职时间</label>
                             <div class="col-xs-4">
                                 <input type="text" 
-                                name="tc_join_date" value="{{tc_join_date}}" class="form-control input-sm">
+                                name="tc_join_date" value="{{tc_join_date}}" class="form-control input-sm" data-required data-description="date" data-describedby="msgfordate">
                             </div>
+                             <span id="msgfordate" class="col-xs-5 help-block"></span>
                         </div>
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">类型</label>
@@ -67,6 +71,7 @@
                                     <option value="0" {{tc_typy == 0? "selected":''}}>管理员</option>
                                 </select>
                             </div>
+                            
                         </div>
                         <div class="form-group">
                             <label for="" class="col-xs-3 control-label">性别</label>
@@ -92,7 +97,7 @@
 
      <?php include "/views/public/js.html" ?>
      <script>
-           require(["../static/js/teacher/add"])
+           require(["../static/js/teacher/betteradd"])
      </script>
 </body>
 </html>
